hphp/hack/test/typecheck/inout/bad_inout_use_lvalue6.php.exp
File "bad_inout_use_lvalue6.php", line 11, characters 5-13:
You cannot decorate this argument as `inout` (Parsing[1002])
File "bad_inout_use_lvalue6.php", line 11, characters 11-13:
`inout` arguments may only be local variables or array indexing expressions  (NastCheck[3050])
